init: Enable zram on boot_complete
This help to save ~50ms in boot time and bootanim shown time

Bug: 62957152
Change-Id: Icabec31aa677bd606ca8735fe9d2acb54e88bd75

--- a/ramdisk/init.target.rc
+++ b/ramdisk/init.target.rc
@@ -39,10 +39,13 @@ on early-init
 on fs
     wait /dev/block/bootdevice
     mount_all fstab.qcom
-    swapon_all fstab.qcom
 
     mkdir /persist/data 0700 system system
     restorecon_recursive /persist
+
+on property:sys.boot_completed=1
+    # Enable ZRAM on boot_complete
+    swapon_all fstab.qcom
 
 #added by litao begin
     start qcom-serialno-sh
